add logstash filters

--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -1,6 +1,7 @@
 input {
 	tcp {
 		port => 5000
+		type => "testFilter"
 	}
 	udp {
 		port => 12201
@@ -8,6 +9,13 @@ input {
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+        grok {
+         match => {
+              "message" => "\[(?<date>.+?)\] %{LOGLEVEL:level}, ClientIP:%{IPV4:client_ip}, SeverIP:%{IPV4:server_ip}, Message:%{GREEDYDATA:text}"
+         }
+       }
+}
 
 output {
 	elasticsearch {
