create filter geoip

--- a/docker-elk/logstash/pipeline/logstash.conf
+++ b/docker-elk/logstash/pipeline/logstash.conf
@@ -10,11 +10,14 @@ input {
 
 ## Add your filters / logstash plugins configuration here
 filter {
-        grok {
-         match => {
-              "message" => "\[(?<date>.+?)\] %{LOGLEVEL:level}, ClientIP:%{IPV4:client_ip}, SeverIP:%{IPV4:server_ip}, Message:%{GREEDYDATA:text}"
-         }
-       }
+	grok {
+		match => {
+			"message" => "\[(?<date>.+?)\] %{LOGLEVEL:level}, ClientIP:%{IPV4:client_ip}, SeverIP:%{IPV4:server_ip}, Message:%{GREEDYDATA:text}"
+		}
+		geoip {
+			source => "client_ip"
+		}
+	}
 }
 
 output {
